--- a/app/admin.html
+++ b/app/admin.html
@@ -21,8 +21,8 @@ current: index
       
       <!--表單-->
       <table class="table ">
-        <thead>
-          <tr>
+        <thead >
+          <tr class="">
             <th scope="col">ID <i class="material-icons text-secondary font-sm align-middle mb-1 font-weight-bold">arrow_downward</i></th>
             <th scope="col">Name</th>
             <th scope="col">Email</th>
